@@ -8,8 +8,6 @@
 cat > configure.in << 'END'
 AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
-PACKAGE=nonesuch
-VERSION=nonesuch
 AC_PROG_CC
 AC_PROG_RANLIB
 LIBOBJS="$LIBOBJS fsusage.o"
