@@ -2,7 +2,7 @@
 
 # Make sure libtool clean targets exist.
 # Report from Eric Magnien.
-
+required=libtool
 . $srcdir/defs || exit 1
 
 # This test requires libtoolize.
