@@ -4,12 +4,6 @@
 
 . $srcdir/defs || exit 1
 
-cat >> configure.in << 'END'
-AC_INIT
-AM_INIT_AUTOMAKE([meal],[123])
-AC_OUTPUT([Makefile])
-END
-
 cat > Makefile.am << 'END'
 AUTOMAKE_OPTIONS = no-exeext
 
