@@ -4,11 +4,8 @@
 
 . $srcdir/defs || exit 1
 
-cat > configure.in << 'END'
-PACKAGE=nonesuch
-VERSION=nonesuch
+cat >> configure.in << 'END'
 fp_PROG_INSTALL
-AC_OUTPUT(Makefile one/Makefile one/two/Makefile)
 END
 
 : > Makefile.am
