@@ -6,14 +6,10 @@
 . $srcdir/defs || exit 1
 
 cat >> configure.in << 'END'
-AC_INIT
-AM_INIT_AUTOMAKE(nonesuch, nonesuch)
-PACKAGE=nonesuch
-VERSION=nonesuch
 AM_PROG_CC_C_O
 AC_PROG_CC
 AC_PROG_CXX
-AC_OUTPUT(Makefile d1/Makefile d2/Makefile)
+AC_OUTPUT(d1/Makefile d2/Makefile)
 END
 
 mkdir d1 d2
